# hashlife

./: CMakeLists.txt  README.md
include/: Context.hpp  GameWrapper.hpp  Node.hpp  constants.hpp  node_utils.hpp  utils.hpp
src/: main.cpp  node_utils.cpp  utils.cpp
